// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toaster Default 1`] = `
<div
  className="sc-iRbamj csmlRs"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className="sc-hEsumM fWopcp"
    >
      <div
        className="sc-bwzfXH bYUsuW"
      >
        <div
          className="sc-ktHwxA uqqxR"
        >
          <div
            className="sc-bwzfXH fdKFCl"
          >
            <span
              className="sc-ifAKCX chsNTs"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH itqPTc"
            style={
              Object {
                "display": "",
              }
            }
          >
            <div
              className="sc-bwzfXH FVtfR"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <p
                className="sc-bxivhb ildJSL"
              >
                Thought provoking we must stand.
              </p>
              <p
                className="sc-bxivhb kFVWeI"
              >
                Game-changer problem-solvers; state of play invest, synergy uplift we must stand up ideate social intrapreneurship.
              </p>
            </div>
          </div>
          <div
            className="sc-bwzfXH rqWTF"
          >
            <button
              className="sc-htoDjs flaPve"
              color={undefined}
              disabled={undefined}
              icon={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toaster With action button 1`] = `
<div
  className="sc-iRbamj csmlRs"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className="sc-hEsumM fWopcp"
    >
      <div
        className="sc-bwzfXH bYUsuW"
      >
        <div
          className="sc-ktHwxA jmlPUn"
        >
          <div
            className="sc-bwzfXH fdKFCl"
          >
            <span
              className="sc-ifAKCX hURNXo"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH itqPTc"
            style={
              Object {
                "display": "",
              }
            }
          >
            <div
              className="sc-bwzfXH FVtfR"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <p
                className="sc-bxivhb ildJSL"
              >
                Overcome injustice.
              </p>
              <p
                className="sc-bxivhb kFVWeI"
              >
                Global low-hanging fruit, collaborative consumption segmentation mobilize support. Problem-solvers cultivate, best practices, shared unit of.
              </p>
            </div>
            <div
              className="sc-bwzfXH dlLzqZ"
            >
              <button
                className="sc-htoDjs gCmkyb"
                color={undefined}
                disabled={undefined}
                icon={undefined}
                id={undefined}
                onClick={[Function]}
                title="Hello"
                type="button"
              >
                Hello
              </button>
            </div>
          </div>
          <div
            className="sc-bwzfXH rqWTF"
          >
            <button
              className="sc-htoDjs flaPve"
              color={undefined}
              disabled={undefined}
              icon={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toaster With auto dismiss 1`] = `
<div
  className="sc-iRbamj csmlRs"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className="sc-hEsumM fWopcp"
    >
      <div
        className="sc-bwzfXH bYUsuW"
      >
        <div
          className="sc-ktHwxA cFzZDw"
        >
          <div
            className="sc-bwzfXH fdKFCl"
          >
            <span
              className="sc-ifAKCX bhMPgu"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH itqPTc"
            style={
              Object {
                "display": "",
              }
            }
          >
            <div
              className="sc-bwzfXH FVtfR"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <p
                className="sc-bxivhb ildJSL"
              >
                Thought provoking we must stand.
              </p>
              <p
                className="sc-bxivhb kFVWeI"
              >
                You can read this now, but soon you won't.
              </p>
            </div>
          </div>
          <div
            className="sc-bwzfXH rqWTF"
          >
            <button
              className="sc-htoDjs flaPve"
              color={undefined}
              disabled={undefined}
              icon={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
